--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li>PopSQL</li>
     </ul>
 <hr>
-<a href="./Public/Contact Me.html">Contact me</a>
+<a href="./Public/Contact-Me.html">Contact me</a>
 <a href="./Public/Hobbies.html">Hobies</a>
 <hr>
 <footer>
